--- a/wfh.html
+++ b/wfh.html
@@ -358,7 +358,7 @@
                 view: 'Auto',
                 authOptions: {
                     authType: 'subscriptionKey',
-                    subscriptionKey: '29tQsOgaggLiWIY5lVfJ9pQ4MabgWEyAIcJSNCrUfEP1f33W6NDjJQQJ99AGACYeBjFd4FboAAAgAZMPZYdR'
+                    subscriptionKey: ''
                 }
             });
 
@@ -453,3 +453,4 @@ function punchInEmployee() {
 
 </body>
 </html>
+
