--- a/wfh1.html
+++ b/wfh1.html
@@ -322,7 +322,7 @@
                 view: 'Auto',
                 authOptions: {
                     authType: 'subscriptionKey',
-                    subscriptionKey: '29tQsOgaggLiWIY5lVfJ9pQ4MabgWEyAIcJSNCrUfEP1f33W6NDjJQQJ99AGACYeBjFd4FboAAAgAZMPZYdR'
+                    subscriptionKey: ''
                 }
             });
 
@@ -490,4 +490,5 @@ async function punchInEmployee() {
 </script>
 
 </body>
+
 </html>
